--- a/_posts/2016-02-26-219Experience.md
+++ b/_posts/2016-02-26-219Experience.md
@@ -1,5 +1,5 @@
 ---
-title: "220全国挺梁同步大游行（波特兰）---《219惊魂记》"
+title: "220全国挺梁同步大游行（波特兰）--《219惊魂记》"
 author: XiBei Zhao
 excerpt: "难怪不时看见大叔大妈时不常的在Burnside桥东站着，要求美国从全世界撤回来。我还一直不解，这是什么高大上的组织啊。既然已经花费了那么多功夫，申请了Permit，还要有保险，到警局备案，怎么临阵一脚雇了这么些大叔大妈站在这呢。到此，哈哈，知道了，原来实践一次自己的宪法修正案第一条所赋予的权利，是如此的容易。心中窃喜。哪里知道，如此的兴奋为后来的219惊魂留下了祸根。。。"
 date: "2016-02-26"
