--- a/_posts/2017-04-09-OCC.md
+++ b/_posts/2017-04-09-OCC.md
@@ -55,7 +55,7 @@ http://pdxchinese.org/
 
 西北兆  11:36
 
-【Victoria Ren追思会和奖学金设立】我不敢确认，在我们当地华人社区，这是不是第一个一个人名字冠名的奖学金？非常感激任子帆父母的爱心，他们在备受失去爱女煎熬的同时，不忘社区公益，主动提出设立奖学金的可能性。家里有高中应届生的可能都知道，在美国的以个人名义设立的奖学金装订成册就是厚如一本词典。希望任子帆奖学金开了一个很好的先例，让我们社区的给予精神发扬光大。这个周六上午（时间地点看Flyer）的追思会将会是一个非常温馨的纪念活动，好时光的周校长和充满爱心的家长们义务帮助任家三年多，她们会再次把这个活动办好，会上会有15分钟子凡小妹妹的生平录像。在学校举办的原因是希望能让子凡能感受到她曾经熟悉的环境。子凡的父母欢迎社区的人们过来一起庆祝女儿短短的但是充满爱的一生。想参加的，请RSVP给任刚。
+【Victoria Ren追思会和奖学金设立】非常感激任子帆父母的爱心，他们在备受失去爱女煎熬的同时，不忘社区公益，主动提出设立奖学金的可能性。家里有高中应届生的可能都知道，在美国的以个人名义设立的奖学金装订成册就是厚如一本词典。希望任子帆奖学金开了一个很好的先例，让我们社区的给予精神发扬光大。这个周六上午（时间地点看Flyer）的追思会将会是一个非常温馨的纪念活动，好时光的周校长和充满爱心的家长们义务帮助任家三年多，她们会再次把这个活动办好，会上会有15分钟子凡小妹妹的生平录像。在学校举办的原因是希望能让子凡能感受到她曾经熟悉的环境。子凡的父母欢迎社区的人们过来一起庆祝女儿短短的但是充满爱的一生。想参加的，请RSVP给任刚。
 
 西北兆  11:54
 
