--- a/_posts/2017-05-12-job-fair.md
+++ b/_posts/2017-05-12-job-fair.md
@@ -1,10 +1,8 @@
 ---
-title: "2017春节期间绘画品酒专题社交活动"
+title: "2017高科技招聘会圆满结束"
 author: XiBei Zhao
-excerpt: "为回应许多群友的要求，公益大群与竹林中文学校联手为社区提供连续五次高档次的社交活动。活动内容以学习绘画为主，特邀永雄工作室的陈先生亲自为大家上课。但是，学习绘画技巧和概念将不是我们活动的唯一目的，更多的是将有相同兴趣的群友，组织在一起，一边操作着手中的五彩画笔，一边品味着杯中的红酒，当然音乐是少不得的。
-
-此次活动的另外一个重要特色将是在每次活动的头一个小时，我们会邀请专家给大家讲养生，着装，饮食，理财，音乐，插花等知识，并与大家互动。"
-date: "2017-01-22"
+excerpt: "一个星期前的今天，社区里面发生了一件大事。在大多数人还在匆匆忙忙赶着上班的时候，有那么一些人已经在Cornell Road和26号高速交界处的双木林（DoubleTree）饭店里里外外忙起来了。这就是我们Oregon Chinese Coalition成立后倾注全力组织参与的全社区范围的高科技招聘会。不能说是华人社区的第一次，但是如此规模的，参与程度如此之广的，调动如此多社区资源的，应该是很少见的。"
+date: "2017-05-12"
 ---
 
 The chatting history for this WeChat group "PDX华人大公益-220波村正事" is shown below.
