--- a/_posts/2017-08-26-h2c-day.md
+++ b/_posts/2017-08-26-h2c-day.md
@@ -222,3 +222,32 @@ Where is OCC team?
 遥  00:30
 
 @淼莲 心动不如马上行动，但我适合短跑，爆发力强，腿短[Facepalm]
+
+老麦  01:30
+
+跑了多长时间？
+
+西北兆  07:24
+
+![]({{ site.url }}/assets/images/6901d140ec5fe67e5d4aaf7eb0c37b28.jpg)
+
+西北兆  07:24
+
+![]({{ site.url }}/assets/images/f2cec5d2d3eb44da466be96bbf74f9b0.jpg)
+
+西北兆  07:24
+
+![]({{ site.url }}/assets/images/f5703783c36c5a51cdf847142bd6479d.jpg)
+
+
+西北兆  07:24
+
+![]({{ site.url }}/assets/images/fa41d4d51dfa7763736af1a19100e41f.jpg)
+
+淼莲  07:31
+
+哇, 其中两个队手拉手跑过终点的, 还是到最后几百米拼命想甩掉对手都甩不掉? [Grin]
+
+淼莲  07:32
+
+四个队的成绩都相当不错[ThumbsUp]
