add in the news

--- a/_chinatown_sayno/2016-09-07-Protest.md
+++ b/_chinatown_sayno/2016-09-07-Protest.md
@@ -11,6 +11,8 @@ main_performance:
 
 Click on any picture to start the slide show.
 
+Also in the News
+
 [the Oregonian: Chinese group protests Old Town Chinatown rebranding effort](http://www.oregonlive.com/portland/index.ssf/2016/09/chinese_group_protests_old_tow.html)
 
 [NW Examiner: Chinatown rebranding divides Chinese American community](http://nwexaminer.com/chinatown-rebranding-divides-chinese-american-community)
