--- a/_posts/2017-12-26-food-bank-2017.md
+++ b/_posts/2017-12-26-food-bank-2017.md
@@ -1,7 +1,7 @@
 ---
 title: "节日后30位社区成员一起在Beaverton Food Bank做义工"
 author: XiBei Zhao
-excerpt: "@all, 今天义工活动顺利完工，我们每一个人包括小朋友帮到87个有需要的家庭。赞给孩子们做榜样的父母！赞小朋友的热心参与！赞住山上上雪链来参加的群友！赞每一位的热心奉献！👍👍👍既然大家都喜欢，回头我再时不时组织一次吧。"
+excerpt: "@all, 今天义工活动顺利完工，我们每一个人包括小朋友帮到87个有需要的家庭。赞给孩子们做榜样的父母！赞小朋友的热心参与！赞住山上上雪链来参加的朋友！赞每一位的热心奉献！👍👍👍既然大家都喜欢，回头我再时不时组织一次吧。"
 date: "2017-12-26"
 ---
 
@@ -15,31 +15,31 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 西北兆  10:04
 
-[Images: 00a9e3c70b38f11c4f1511e62e71ddeb.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/00a9e3c70b38f11c4f1511e62e71ddeb.jpg)
 
 西北兆  10:04
 
-[Images: cccd91d8c96c88c7cf30de2fcb5d2c19.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/cccd91d8c96c88c7cf30de2fcb5d2c19.jpg)
 
 西北兆  10:04
 
-[Images: e959f2745e1340accd2f9cacf16c7e02.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/e959f2745e1340accd2f9cacf16c7e02.jpg)
 
 西北兆  10:04
 
-[Images: a068c8cbbad25195810be1cab1d7d3f0.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/a068c8cbbad25195810be1cab1d7d3f0.jpg)
 
 西北兆  10:04
 
-[Images: c3665adc7e01e67513098f7ff92a1b78.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/c3665adc7e01e67513098f7ff92a1b78.jpg)
 
 西北兆  10:21
 
-[Images: 1f397befc1272ec1718181e604e04de4.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/1f397befc1272ec1718181e604e04de4.jpg)
 
 西北兆  10:21
 
-[Images: db13d6a60aa91eb96758000f1eea268f.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/db13d6a60aa91eb96758000f1eea268f.jpg)
 
 西北兆  10:22
 
@@ -47,27 +47,27 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 西北兆  10:22
 
-[Images: d9ca5eb969ba992ce02a7b81c17dc477.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/d9ca5eb969ba992ce02a7b81c17dc477.jpg)
 
 西北兆  10:31
 
-[Images: b17f5e8c7943e46890a0d49c349446f2.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/b17f5e8c7943e46890a0d49c349446f2.jpg)
 
 西北兆  11:27
 
-[Images: e31fa95ae2552a523c0dd831e21a18e4.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/e31fa95ae2552a523c0dd831e21a18e4.jpg)
 
 西北兆  11:29
 
-[Images: 7ed3c46f1dab24b8c7db50163ea8c16b.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/7ed3c46f1dab24b8c7db50163ea8c16b.jpg)
 
 敏Min Kong  13:34
 
-[Images: 711e66e269c2fe8b7da850914097bd89.jpg(View in attachment)]
+![]({{ site.url }}/assets/images/711e66e269c2fe8b7da850914097bd89.jpg)
 
 西北兆  15:26
 
-[Images: 814d713f1c945fd4568d87160c2848ab.jpg(View in attachment)]
+[![]({{ site.url }}/assets/images/814d713f1c945fd4568d87160c2848ab.jpg)
 
 西北兆  15:06
 
@@ -84,6 +84,6 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 西北兆  15:26
 
-最后是Nancy在《PDX 志愿服务公益群》的总结。
+Nancy在《PDX 志愿服务公益群》是这样总结的：
 
-@all, 今天义工活动顺利完工，我们每一个人包括小朋友帮到87个有需要的家庭。赞给孩子们做榜样的父母！赞小朋友的热心参与！赞住山上上雪链来参加的群友！赞每一位的热心奉献！👍👍👍既然大家都喜欢，回头我再时不时组织一次吧。
+@all, 今天义工活动顺利完工，我们每一个人包括小朋友帮到87个有需要的家庭。赞给孩子们做榜样的父母！赞小朋友的热心参与！赞住山上上雪链来参加的朋友！赞每一位的热心奉献！👍👍👍既然大家都喜欢，回头我再时不时组织一次吧。
