--- a/_chinatown_sayno/2016-09-07-Protest.md
+++ b/_chinatown_sayno/2016-09-07-Protest.md
@@ -5,6 +5,20 @@ main_performance:
     image_path: /assets/images/chinatown/20160907_175613.jpg
   - url: /assets/images/chinatown/20160907_175649.jpg
     image_path: /assets/images/chinatown/20160907_175649.jpg
+  - url: /assets/images/chinatown/10caf186407901f710800d8edaa0ecb9.jpg
+    image_path: /assets/images/chinatown/10caf186407901f710800d8edaa0ecb9.jpg
+  - url: /assets/images/chinatown/5fd7c52c76a86fecf4a77c6eb4fee5ac.jpg
+    image_path: /assets/images/chinatown/5fd7c52c76a86fecf4a77c6eb4fee5ac.jpg
+  - url: /assets/images/chinatown/7ad412ad2914acf2cfb56dd75e5f60cb.jpg
+    image_path: /assets/images/chinatown/7ad412ad2914acf2cfb56dd75e5f60cb.jpg
+  - url: /assets/images/chinatown/a289613a834637030cde51e8db70363a.jpg
+    image_path: /assets/images/chinatown/a289613a834637030cde51e8db70363a.jpg
+  - url: /assets/images/chinatown/2fa617220608086b4c6bea6e1f1d6660.jpg
+    image_path: /assets/images/chinatown/2fa617220608086b4c6bea6e1f1d6660.jpg
+  - url: /assets/images/chinatown/029581221b35a111d748bc5790946420.jpg
+    image_path: /assets/images/chinatown/029581221b35a111d748bc5790946420.jpg
+  - url: /assets/images/chinatown/5245e0caa7e90e4df9dfbdf5762a25f4.jpg
+    image_path: /assets/images/chinatown/5245e0caa7e90e4df9dfbdf5762a25f4.jpg
 ---
 
 {% include gallery id="main_performance" %}
