add news report

--- a/_chinatown_gallery/2016-12-21-flash-mob.md
+++ b/_chinatown_gallery/2016-12-21-flash-mob.md
@@ -98,4 +98,8 @@ main_performance:
 
 ---
 
+[Youtube: Chinese violinist performs flashmob Chinatown solo](https://www.youtube.com/watch?v=JwJUAobs-Os)
+
+[Oregonian: In new Chinatown, a new relationship emerges between Chinese and homeless communities](http://www.oregonlive.com/portland/index.ssf/2016/12/chinatown_homeless_portland.html)
+
 {% include gallery id="main_performance" %}
