--- a/_chinatown_gallery/2016-12-21-flash-mob.md
+++ b/_chinatown_gallery/2016-12-21-flash-mob.md
@@ -103,3 +103,145 @@ main_performance:
 [Oregonian: In new Chinatown, a new relationship emerges between Chinese and homeless communities](http://www.oregonlive.com/portland/index.ssf/2016/12/chinatown_homeless_portland.html)
 
 {% include gallery id="main_performance" %}
+
+The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is shown below.
+
+—————  2016-12-21  —————
+
+西北兆  21:06
+
+真的是“波村正事”不断，今天天公作美，我们精心筹划组织的“中国城快闪”活动取得了圆满的成功[ThumbsUp] 好多的话要说，不知从何开始。我开始传照片上来吧，等大家欣赏完了，我再和大家汇报今天的活动情况[Fight]
+
+西北兆  21:10
+
+左手是全程采访的Oregonian记者，中间的是R2D2露营地的最初策划者之一，按照我的说法，“You are the guy”，记者在旁边感到这个用词很恰当，一个字涵盖了太多的内容。
+
+西北兆  21:12
+
+我们今天快闪的主角，周虹老师[Rose]
+
+西北兆  21:17
+
+旗袍队员开始出现，都想再听一次周老师的一曲《花儿为什么这样红》。
+
+西北兆  21:19
+
+正午已过，好时光载着旗袍队员经过牌楼进入中国城。
+
+西北兆  21:21
+
+她们一下车，就惊艳了周围的人。
+
+西北兆  21:22
+
+记者忙不迭拍照照片
+
+西北兆  21:29
+
+永雄工作室的陈先生也到现场以便协助旗袍队员，一边构思中国城改造后的景象[ThumbsUp]
+
+西北兆  21:35
+
+实际上在旗袍队员进场之前，很多群友已经做足了准备工作。这其中包括波村摄影爱好群的@Marina，看看她手中的家伙[Surprise]
+
+西北兆  21:37
+
+不输给旗袍队的美女，June Yu[ThumbsUp]
+
+西北兆  21:41
+
+她和@Nancy 春燕 （怎么没找到照片，知道她低调[Sob]）早早就到了好运餐厅，老板@华黄 早已经把60份午餐准备停当，她们赶在旗袍队专车进场前抵达中国城。春燕为了不让饭菜凉了，自己坐在车里，让引擎一直运转着。
+
+西北兆  21:43
+
+我们的社区公益第一人，@Victor Leo，一路紧赶慢赶从东边开车过来，因为他负责音响设备。
+
+西北兆  21:47
+
+@Kitson Yu 余仕維 作为东主（提供场地的秉公堂堂主），上午10点就到了，为了早点打开暖气，好让周老师能去掉身上的寒气，能自如弹出琴弦上的行云流水。。。
+
+西北兆  21:51
+
+一个小插曲，活动结束，旗袍队准备上车离开，@Kitson Yu 余仕維 问我她们都哪里去了，怎么不上来坐坐？说是已经位志愿者们备好了咖啡。。。当听说她们可能走了的时候，Kitson显得有些惆怅。。。我往楼下看去，陈先生也正要最后一个上车。我赶紧叫他让旗袍队员上楼，参观一下老侨的堂内布置。后来的情况，我也只是从照片上看了。
+
+西北兆  21:52
+
+这位老侨的名字没记住，但是任劳任怨为周老师演出场地做着准备工作。
+
+西北兆  21:56
+
+左手边的就是拍摄这些照片的张光超的夫人，Jennifer。看她一脸的阳光，为冬至的今天给在现场的大家带来了暖意。
+
+西北兆  21:58
+
+昨天一起开会的BikeLoud PDX几位主要人物在参加了市府有关SE交通安全听证会后特意赶来
+
+西北兆  22:00
+
+这位Oregonian记者，楼上楼下跑个不停，不想漏掉任何一个镜头。
+
+西北兆  22:03
+
+找到春燕的身影了，她和June在把群友捐赠的睡袋，毯子和罐头食品从车上卸下来。
+
+西北兆  22:07
+
+对张光超贡献社区公益，我是佩服得无话可讲。为了能兼顾到录像和摄影，他说服了夫人Jennifer一定要从班上溜出来。在现场，当时阳光很足，但是的确很冷。他为了方便摄影，特意轻装上阵。为了今晚满足大家了解现场情况，下午就把照片整理了出来。
+
+西北兆  22:11
+
+再看看现场抓拍的行人。。。
+
+西北兆  22:15
+
+据说对面工地上的工人，在听到小提琴声后，情不自禁在工地上跳起舞来。
+
+西北兆  22:28
+
+找到了@Nancy春燕 的正面照[Grin] 还把好运餐馆老板娘给带了出来[Rose]
+
+西北兆  22:30
+
+下面。。。在悠扬的琴声中开始捐赠活动
+
+西北兆  22:50
+
+好像已经不少了，这还是选出来的，张光超的每一张照片都是很有意境，好难割舍。在@Marina 的长镜头下拍出的照片还需要整理，到时候会奉献给大家。最后再贴几张有趣的镜头。
+
+Hong  23:13
+
+故事讲得很真切。谢谢您们的全面的计划和安排，强悍的领导力！
+
+June Yu   23:24
+
+感谢这个温暖的群，感谢群策群力，让这个冬至温暖如春[Rose][Rose][Rose]。特别感谢企划，调动和亲力亲为的领导@西北兆 和众前辈们。中国城里中国风，冬至温情暖街友。
+
+Jing静 养生堂  23:39
+
+冬至到来, 可否想到那些流浪街头在寒风凛凛的无家可归者呢? 雅静旗袍团队有幸参与波特兰市唐人街慈善"快闪" Flash Mob"活动, 帮助分发热气腾腾的食物和衣物,  把爱和温暖送到需要的人群, 还有什么比这种更有意义的事情呢? 确实是四海一家! 再次感谢@西北兆 和主办单位, 社区朋友的爱心和付出[Rose][Heart][Rose]
+
+—————  2016-12-22  —————
+
+Marina  00:08
+
+我最喜欢是这个人。她刚好看过来，然后对着我说话我没听清楚，心想：糟了，要抱怨我拍她。凑近点儿她说：did you bring this?(指向食物) I am so hungry. Can I have some?
+
+Marina  00:09
+
+反正，她感动到我了。[Cry]
+
+西北兆  00:15
+
+这次活动让参与的群友有机会深入了解这一群人，无论是躺在街头的，还是坚强站着的。
+
+西北兆  00:18
+
+我们这次提供了60份热餐，实际上，事先在征求他们意见的时候，我被告知，至少需要200份。
+
+西北兆  00:20
+
+今天活动开始之前，我去打招呼，那里的人们告诉不知道此事的人说，他们是community来送食物的。
+
+西北兆  00:24
+
+因为是快闪，求的是出其不意的效果，所以，没有请更多的人过去。但是，我们志愿者身着的旗袍，楼上的《花儿为什么这样红》，空气中飘洒的是华人社区对每一个人的爱和尊重。This will go long way.
