--- a/_chinatown_sayno/2016-09-07-Protest.md
+++ b/_chinatown_sayno/2016-09-07-Protest.md
@@ -19,6 +19,24 @@ main_performance:
     image_path: /assets/images/chinatown/029581221b35a111d748bc5790946420.jpg
   - url: /assets/images/chinatown/5245e0caa7e90e4df9dfbdf5762a25f4.jpg
     image_path: /assets/images/chinatown/5245e0caa7e90e4df9dfbdf5762a25f4.jpg
+  - url: /assets/images/chinatown/Protest1.jpg
+    image_path: /assets/images/chinatown/Protest1.jpg
+  - url: /assets/images/chinatown/Protest2.jpg
+    image_path: /assets/images/chinatown/Protest2.jpg
+  - url: /assets/images/chinatown/Protest3.jpg
+    image_path: /assets/images/chinatown/Protest3.jpg
+  - url: /assets/images/chinatown/Protest4.jpg
+    image_path: /assets/images/chinatown/Protest4.jpg
+  - url: /assets/images/chinatown/Protest5.jpg
+    image_path: /assets/images/chinatown/Protest5.jpg
+  - url: /assets/images/chinatown/Protest6.jpg
+    image_path: /assets/images/chinatown/Protest6.jpg
+  - url: /assets/images/chinatown/Protest7.jpg
+    image_path: /assets/images/chinatown/Protest7.jpg
+  - url: /assets/images/chinatown/Protest8.jpg
+    image_path: /assets/images/chinatown/Protest8.jpg
+  - url: /assets/images/chinatown/Protest9.jpg
+    image_path: /assets/images/chinatown/Protest9.jpg
 ---
 
 {% include gallery id="main_performance" %}
