--- a/_chinatown_newyear/2018-02-18-newyear.md
+++ b/_chinatown_newyear/2018-02-18-newyear.md
@@ -1,5 +1,5 @@
 ---
-title: "Portland Chinatown Chinese New Year Celebration"
+title: "Collection of Celebration Programs and Posts"
 ---
 
 {% include gallery id="main_performance" %}
