--- a/_posts/2018-03-21-art-contest-2018.md
+++ b/_posts/2018-03-21-art-contest-2018.md
@@ -7,13 +7,13 @@ date: "2018-03-21"
 
 小艺术家艺术创作大赛/Community Fair Youth Art Contest
 
-为了发掘社区的小艺术家，给小艺术家们一个展示作品的舞台，OCC特别在《艺术商业教育联展》上开辟小艺术家艺术创作大赛单元。
+为了发掘社区的小艺术家，给小艺术家们一个展示作品的舞台，OCC特别在4月14日举办的《艺术商业教育联展》上开辟小艺术家艺术创作大赛单元。
 
 竞赛主题：春来了
 
 竞赛组：Preschool组; K-2年级组，3-5年级组，6-8年级组
 
-参与方式：各位小艺术家根据主题自由创作，只要表现出春意，题材和表现方式不限，4月12日前将画作送至联展绘画竞赛单元的志愿者处（待公布）即为报名成功.
+参与方式：各位小艺术家根据主题自由创作，只要表现出春意，题材和表现方式不限，4月12日前将作品送至联展艺术创作大赛单元的志愿者处（待公布）即为报名成功.
 
 所有参展绘画将在4月14日的联合展中展出，并由现场观众和参展艺术家共同评分.
 
@@ -26,3 +26,15 @@ date: "2018-03-21"
 奖品：每位获得一二三等奖的小艺术家将获得与参展艺术家面对面交流作品的机会，OCC将为获奖的小艺术家颁发奖杯奖状，参与联展的商家会为小艺术家们提供特别奖品。
 
 获奖作品将在公益大群，OCC官网，和波特兰本地的各报刊媒体刊登。
+
+### 组委会成员
+
+项小柔
+
+画家李铁
+
+画家陈永雄
+
+### 艺术创作大赛单元的志愿者联系方式：
+
+TBD
