--- a/_posts/2018-03-21-art-contest-2018.md
+++ b/_posts/2018-03-21-art-contest-2018.md
@@ -29,12 +29,16 @@ date: "2018-03-21"
 
 ### 组委会成员
 
-项小柔
-
-画家李铁
-
-画家陈永雄
+项小柔， 画家李铁， 画家陈永雄
 
 ### 艺术创作大赛单元的志愿者联系方式：
 
 TBD
+
+### 鼓励各中文学校组织学生参加这项活动，也方便统一接收参赛作品。个人参赛的作品需要交给附近的志愿者处。
+
+### 联系方式
+
+hzhao@pdxchinese.org
+
+WeChat: @西北兆，@项小柔Faye
