--- a/_posts/2018-03-21-art-contest-2018.md
+++ b/_posts/2018-03-21-art-contest-2018.md
@@ -35,10 +35,10 @@ date: "2018-03-21"
 
 TBD
 
+上交作品的时候，请注明：名字，学校，年级，父母一人的姓名和联系方式。
+
 ### 鼓励各中文学校组织学生参加这项活动，也方便统一接收参赛作品。个人参赛的作品需要交给附近的志愿者处。
 
 ### 联系方式
 
-hzhao@pdxchinese.org
-
-WeChat: @西北兆，@项小柔Faye
+hzhao@pdxchinese.org; WeChat: @西北兆，@项小柔Faye
