--- a/_posts/2018-04-28-82nd-rose-parade-2018.md
+++ b/_posts/2018-04-28-82nd-rose-parade-2018.md
@@ -50,8 +50,14 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 在我们要离开的时候，@遥又交给了我一张支票，是给OCC的捐款。我们本来是来奉献的，结果还让@遥和她的合伙人付出得更多。她们对我们社区的支持，让我无言以对，除了深深的感激！
 
-![]({{ site.url }}/assets/images/103c09f7a6feadcf997350ef24d0ecc7.jpg)
+![]({{ site.url }}/assets/images/05a93f345153f96a30edf1d9a24c3ae8.jpg)
+
+现场学习基本动作
 
 ![]({{ site.url }}/assets/images/f1ff131cfaf8772b323825cc030e4a7e.jpg)
 
-![]({{ site.url }}/assets/images/05a93f345153f96a30edf1d9a24c3ae8.jpg)
+出发
+
+![]({{ site.url }}/assets/images/103c09f7a6feadcf997350ef24d0ecc7.jpg)
+
+舞起来
