--- a/_posts/2018-06-09-food-bank-june-2018.md
+++ b/_posts/2018-06-09-food-bank-june-2018.md
@@ -13,7 +13,7 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 我抽空抓拍了一些照片，仔细看里面的故事不少。大家最关心的是我们的领导Nancy，手腕骨折刚取出固定的钉子，今天便出现在了义工人群中，我本来还担心她能做什么，结果人家和对面的小姑娘配合得天衣无缝，Nancy用一只手把着袋子，对面的小姑娘负责封口。不知道这样做的效率如何，但是这种精神绝对令我们敬佩，相信那位配合Nancy的小朋友会永远记住这位阿姨和今天的经历。
 
-我头一次和Helen说上话，她两个小时下来和旁边的“巴铁”小姑娘相谈甚欢，后来Helen的女儿和这位义工交换了mail。在结束的时候，大家都在外面听取今天劳动成果总结，她在里面一直把所有的用具清洗干净，走出来的时候，脸上流动出的安详，给我的感觉就像是在家里请客人，把厨房收拾好了，回到客厅可以听大家唠嗑了的样子。
+我头一次和Helen说上话，她两个小时下来和旁边的“巴铁”小姑娘相谈甚欢，后来Helen的女儿和这位义工交换了email。在结束的时候，大家都在外面听取今天劳动成果总结，她在里面一直把所有的用具清洗干净，走出来的时候，脸上流动出的安详，给我的感觉就像是在家里请客人，把厨房收拾好了，回到客厅可以听大家唠嗑了的样子。
 
 有一家人里面的小儿子，叫Joseph，岁数不大的他承担最后打包并送到称重的传送带上。我一看到他，就被他麻利的动作吸引了，而且满脸的严肃。老人言，从小看到老，这小子今后肯定是干什么像什么，做什么成什么，最重要的是从小就有着一份爱心。前途无量！
 
