--- a/_posts/2018-06-09-food-bank-june-2018.md
+++ b/_posts/2018-06-09-food-bank-june-2018.md
@@ -61,22 +61,20 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 －陳曉慧獻給義工小朋友的詩   2018年6月9日
 
-你們還在需要别人餵養的年紀\
-嘗試著去餵養别人\
-你們肯定知道飢腸漉漉的滋味\
-因而你們運用了第六感官\
-去推心置腹\
-去換位思考\
+你們還在需要别人餵養的年紀\嘗試著去餵養别人\你們肯定知道飢腸漉漉的滋味\因而你們運用了第六感官\去推心置腹\去換位思考
+
 我的童年也曾飢餓\
 是加拿大的面粉和\
 澳大利亞的練奶將我救活\
 我尊敬的小朋友呀\
 你們讓我看到有力的手\
-和強大的心\
+和強大的心
+
 你們是華人之光\
 你們亦是世界的希望\
 是感性和理性的生靈\
-是茫茫人海中的導航\
+是茫茫人海中的導航
+
 我可以睡了\
 你們今天的行動讓我安寢\
 誰說色彩斑爛的是夢\
