--- a/_posts/2018-06-09-food-bank-june-2018.md
+++ b/_posts/2018-06-09-food-bank-june-2018.md
@@ -59,7 +59,7 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 《華人之光》
 
-－陳曉慧獻給義工小朋友的詩   2018年6月9日
+－陳曉慧獻給義工小朋友的詩
 
 你們還在需要别人餵養的年紀<br/>嘗試著去餵養别人<br/>你們肯定知道飢腸漉漉的滋味<br/>因而你們運用了第六感官<br/>去推心置腹<br/>去換位思考
 
