--- a/_posts/2018-06-09-food-bank-june-2018.md
+++ b/_posts/2018-06-09-food-bank-june-2018.md
@@ -63,19 +63,8 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 你們還在需要别人餵養的年紀<br/>嘗試著去餵養别人<br/>你們肯定知道飢腸漉漉的滋味<br/>因而你們運用了第六感官<br/>去推心置腹<br/>去換位思考
 
-我的童年也曾飢餓\
-是加拿大的面粉和\
-澳大利亞的練奶將我救活\
-我尊敬的小朋友呀\
-你們讓我看到有力的手\
-和強大的心
+我的童年也曾飢餓<br/>是加拿大的面粉和<br/>澳大利亞的練奶將我救活<br/>我尊敬的小朋友呀<br/>你們讓我看到有力的手<br/>和強大的心
 
-你們是華人之光\
-你們亦是世界的希望\
-是感性和理性的生靈\
-是茫茫人海中的導航
+你們是華人之光<br/>你們亦是世界的希望<br/>是感性和理性的生靈<br/>是茫茫人海中的導航
 
-我可以睡了\
-你們今天的行動讓我安寢\
-誰說色彩斑爛的是夢\
-你們展現的精神已經亮麗繽紛。
+我可以睡了<br/>你們今天的行動讓我安寢<br/>誰說色彩斑爛的是夢<br/>你們展現的精神已經亮麗繽紛。
