--- a/_posts/2018-06-10-fashion-show-2018.md
+++ b/_posts/2018-06-10-fashion-show-2018.md
@@ -1,7 +1,7 @@
 ---
-title: "首届时装秀暨华裔玫瑰公主和玫瑰皇后评选晚餐会胜利落下帷幕"
+title: "首届时装秀暨华裔玫瑰公主和玫瑰皇后评选圆满落下帷幕"
 author: XiBei Zhao
-excerpt: "由Kerry的Oceana Blue Productions公司主办的波特兰华人社区首届时装秀暨华裔玫瑰公主和玫瑰皇后评选晚餐会上个周日在MAC俱乐部胜利落下帷幕，在Kerry的专业资源主导，社区志愿者的无私奉献，众多群友及家属的积极参与下，共同创造了本地华人社区的历史。"
+excerpt: "由Kerry的Oceana Blue Productions公司主办的波特兰华人社区首届时装秀暨华裔玫瑰公主和玫瑰皇后评选上个周日在MAC俱乐部圆满落下帷幕，在Kerry的专业资源主导，社区志愿者的无私奉献，众多群友及家属的积极参与下，共同创造了本地华人社区的历史。"
 date: "2018-06-10"
 ---
 
