--- a/_posts/2018-06-10-fashion-show-2018.md
+++ b/_posts/2018-06-10-fashion-show-2018.md
@@ -13,7 +13,7 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 由Kerry的Oceana Blue Productions公司主办的波特兰华人社区首届时装秀暨华裔玫瑰公主和玫瑰皇后评选晚餐会上个周日在MAC俱乐部胜利落下帷幕，在Kerry的专业资源主导，社区志愿者的无私奉献，众多群友及家属的积极参与下，共同创造了本地华人社区的历史。
 
-从酝酿到聚焦在T台，也就是一个多余月的时间。受到4月份联展上孩子们时装秀大获成功的鼓舞，Kerry一时激动得不能自己，决心倾注自己的专业资源为社区打造一场高大上的活动，让华人在主流社会舞台上展示我们华人在新世纪的精神面貌。她跟我说了这个想法，尽管OCC作为非营利性组织，参与一个商业运作，还从未做过，期间的犹豫很短暂，后来得到OCC理事们的大力撑腰，认为这是为华人社区添补一大空缺的极好机会，而且，OCC就是要大张旗鼓支持自已社区成员，只有他们的成功，社区工作才能做强，公益也才能做大。这次活动的成功验证了这个想法，为未来华人商会运作再次提供了宝贵经验。
+从酝酿到聚焦在T台，也就是一个多月的时间。受到4月份联展上孩子们时装秀大获成功的鼓舞，Kerry一时激动得不能自己，决心倾注自己的专业资源为社区打造一场高大上的活动，让华人在主流社会舞台上展示我们在新世纪的精神面貌。她跟我说了这个想法，尽管OCC作为非营利性组织，参与一个商业运作，还从未做过，期间的犹豫很短暂，后来得到OCC理事们的大力撑腰，认为这是为华人社区添补一大空缺的极好机会，而且，OCC就是要大张旗鼓支持自已社区成员，只有他们的成功，社区工作才能做强，公益也才能做大。这次活动的成功验证了这个想法，为未来华人商会运作再次提供了宝贵经验。
 
 上面说到添补空缺，这也是我们最看重的一个方面。下面是我在晚宴上的发言，
 
@@ -21,7 +21,7 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 Things are changing now, in a good way. We have more kids, as well as their parents, going out and to the centre stage. Today is another important stage we want to encourage our kids and their parents to take. To be successful as a person, not only academically but also socially, we need to develop the skills that consists of strength, confidence, and being able to express and communicate. All those can be found from the ones who are on the stage today.'
 
-在整个活动过程中，尤其是时装秀和晚餐会当晚，所有人，台前幕后，台上台下，脸上都洋溢着自信，当这种自信发生在一个群体里面的时候，就形成了一种少见的力量。我想这是在现场每个人都能感受到的。 我是不是言过其辞，有照片为证。
+在整个活动过程中，尤其是时装秀和晚餐会当晚，所有人，台前幕后，台上台下，脸上都洋溢着自信，当这种自信发生在一个群体里面的时候，就形成了一种少见的力量。我想这是在现场每个人都能感受到的。 我这样说并非言过其辞，有照片为证。
 
 下面贴出来的来自多人的杰作，尤其是OCC“御用”摄影师张广超从自己的海量照片中挑选出来的精品。
 
