--- a/_posts/2018-07-14-food-bank-july-2018.md
+++ b/_posts/2018-07-14-food-bank-july-2018.md
@@ -1,5 +1,5 @@
 ---
-title: "社区小义工把自己的Birthday Party放在了Food Bank"
+title: "社区小义工在Food Bank举办Birthday Party"
 author: XiBei Zhao
 excerpt: "今天是我们社区第六次组织去Oregon Food Bank做集体义工，这次义工活动有所不同，因为一位义工的女儿在四月份参加过后，喜欢上了这项活动，跟妈妈说她的生日party要在Food Bank和小朋友们一起过，而今天她如愿以偿，在大家的祝福下，她度过了一个非常有意义的生日。"
 date: "2018-07-14"
