--- a/_posts/2018-07-14-food-bank-july-2018.md
+++ b/_posts/2018-07-14-food-bank-july-2018.md
@@ -9,7 +9,7 @@ The chatting history for this WeChat group "PDX 志愿服务公益群" is shown 
 
 —————  2018-07-14  —————
 
-今天是我们社区第六次组织去Oregon Food Bank做集体义工，如同Nancy说的，很多群友已经养成了习惯，在Food Bank见到了多是熟悉的面孔。
+今天是我们社区第六次组织去Oregon Food Bank做集体义工，如同Nancy说的，很多群友已经养成了习惯，在Food Bank见到了很多熟悉的面孔。
 
 不过，今天的义工活动有所不同，因为一位义工的女儿在四月份参加过后，喜欢上了这项活动，跟妈妈说她的生日party要在Food Bank和小朋友们一起过，而今天她如愿以偿，在大家的祝福下，她度过了一个非常有意义的生日。
 
