--- a/_posts/2018-07-14-food-bank-july-2018.md
+++ b/_posts/2018-07-14-food-bank-july-2018.md
@@ -5,7 +5,7 @@ excerpt: "今天是我们社区第六次组织去Oregon Food Bank做集体义工
 date: "2018-07-14"
 ---
 
-The chatting history for this WeChat group "PDX 志愿服务公益群" is shown below.
+The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is shown below.
 
 —————  2018-07-14  —————
 
