--- a/_posts/2018-09-08-food-bank-sept-2018.md
+++ b/_posts/2018-09-08-food-bank-sept-2018.md
@@ -1,7 +1,7 @@
 ---
-title: "汉语角活动以汉服和旗袍征服了游客"
+title: "Food Bank赞扬OCC每月一次集体义工活动"
 author: XiBei Zhao
-excerpt: "感谢今天前往Food Bank参加集体义工活动的群友和孩子（家属）们！我们一起度过了一个非常愉快的下午，认识了一些新群友，尤其是刚从国内移民过来的几位妈妈。孩子们的表现尤其值得称赞！Phoebe上个星期刚参加了去PHFS给无家可归的家庭送午餐活动，今天又出现在FB义工群中."
+excerpt: "感谢今天前往Food Bank参加集体义工活动的群友和孩子（家属）们！我们一起度过了一个非常愉快的下午，认识了一些新群友，尤其是刚从国内移民过来的几位妈妈。孩子们的表现尤其值得称赞！Phoebe上个星期刚参加了去PHFS给无家可归的家庭送午餐活动，今天又出现在FB义工群中。在开场介绍注意事项的时候，负责员工特意指出OCC固定每月集体义工活动。"
 date: "2018-09-08"
 ---
 
