--- a/_posts/2018-09-08-food-bank-sept-2018.md
+++ b/_posts/2018-09-08-food-bank-sept-2018.md
@@ -1,7 +1,7 @@
 ---
 title: "Food Bank赞扬OCC每月一次集体义工活动"
 author: XiBei Zhao
-excerpt: "感谢今天前往Food Bank参加集体义工活动的群友和孩子（家属）们！我们一起度过了一个非常愉快的下午，认识了一些新群友，尤其是刚从国内移民过来的几位妈妈。孩子们的表现尤其值得称赞！Phoebe上个星期刚参加了去PHFS给无家可归的家庭送午餐活动，今天又出现在FB义工群中。在开场介绍注意事项的时候，负责员工特意指出OCC固定每月集体义工活动。"
+excerpt: "感谢今天前往Food Bank参加集体义工活动的群友和孩子（家属）们！我们一起度过了一个非常愉快的下午，认识了一些新群友。孩子们的表现尤其值得称赞！Phoebe上个星期刚参加了给无家可归的家庭送晚餐活动，今天又出现在FB义工群中。在开场介绍注意事项的时候，负责员工特意指出OCC固定每月集体义工活动。"
 date: "2018-09-08"
 ---
 
@@ -13,7 +13,7 @@ The chatting history for this WeChat group "PDX华人大公益pdxchinese.org" is
 
 孩子们的表现尤其值得称赞！David跟着妈妈成了这里常客，今天又有几位新的小朋友加入了进来。
 
-Phoebe上个星期刚参加了去PHFS给无家可归的家庭送午餐活动，今天又出现在FB义工群中，说是爸爸妈妈有事来不了，她要求他们把她送来。多么可贵的精神.
+Phoebe上个星期刚参加了去PHFS给无家可归的家庭送晚餐活动，今天又出现在FB义工群中，说是爸爸妈妈有事来不了，她要求他们把她送来。多么可贵的精神.
 
 照片系列最后一张母女俩，女儿在Lake Ridge上学，看着很有性格的样子，说话动作干净利索，不时动员一起的人把布袋子往下调整。期间Phoebe加入进来，同是8年纪的两个女孩不断聊着各自学校的事，很开心的样子。
 
