--- a/_posts/2019-03-23-liao-bing-2019.md
+++ b/_posts/2019-03-23-liao-bing-2019.md
@@ -1,11 +1,22 @@
 ---
-title: "廖冰博士将应邀再次来波村做亲子讲座"
+title: "廖冰博士应邀再次来波村做亲子讲座"
 author: XiBei Zhao
 excerpt: "去年讲座的盛况大家可能还记忆犹新，预定两个小时的讲座延长到3个半小时。本次讲座的主题是《如何发掘孩子的内驱力》，相信廖老师又会带给大家干货满满的信息。"
-date: "2019-03-14"
+date: "2019-03-23"
 ---
 
-![]({{ site.url }}/assets/images/906dbc00865f8ab064656984d0c92d19.jpg)
+廖冰校友再次不负众望，为本地华人社区家长及孩子们做了一场极为生动的亲子讲座，下面是来自两位与会者的帖子：
+
+*感谢廖老师讲座! 听君一席话，胜读十年书! 刚刚给领导补完课，期待下次廖老师来讲接受孩子的不完美。 感谢杜主席组织这么好的学习机会，见到好多同一战壕里的姐们儿[Smile]
+
+同期待下一期[Whimper] 听廖老师讲座，几小时都好像一眨眼就过了，去年第一期也听了，很感谢廖老师这次和我们分享她最新的学习工作体会，让我们也跟着一起与时俱进，受益匪浅[Fight]  主任(指的是全程组织的OCC理事杜辉)这次全家上阵服务，感谢给咱们提供这么好的学习机会[Rose][Rose]*
+
+
+![]({{ site.url }}/assets/images/a422bb60c809c93ba8bbcafacc829028.jpg)
+
+![]({{ site.url }}/assets/images/3e96597f581f2970117aceb329ff165e.jpg)
+
+![]({{ site.url }}/assets/images/divider.jpg)
 
 报名火爆进行中，我们原有场地半天爆满。应大家要求，我们新场地为 Intel HF3 auditorium (5200 NE Elam Young Pkwy, Hillsboro, OR 97124)。 请相互转告，没有报名的朋友继续加油。感谢您的爱心捐款。涓涓细流汇成海，点点纤尘积就山。
 
