--- a/_posts/2019-03-23-liao-bing-2019.md
+++ b/_posts/2019-03-23-liao-bing-2019.md
@@ -14,7 +14,7 @@ date: "2019-03-23"
 
 ![]({{ site.url }}/assets/images/a422bb60c809c93ba8bbcafacc829028.jpg)
 
-![]({{ site.url }}/assets/images/3e96597f581f2970117aceb329ff165e.jpg)
+![]({{ site.url }}/assets/images/3e96597f581f2970117aceb329ff165e.temp.jpg)
 
 ![]({{ site.url }}/assets/images/divider.jpg)
 
