--- a/_posts/2019-11-16-winter-drive-2019.md
+++ b/_posts/2019-11-16-winter-drive-2019.md
@@ -69,6 +69,8 @@ The chatting history for this WeChat group "PDX 华人社区公益一群" is sho
 
 ![]({{ site.url }}/assets/images/da9461fe87ba574771f785847cd9a8ba.jpg)
 
+![]({{ site.url }}/assets/images/d6623bea99a82d688734e7066bcb2c72.jpg)
+
 4点收工之后，大家便马不停蹄赶往位于市中心。去年我们把收集到的捐赠物品全部给了Central City Concern，今年我们决定送给这一年打交道越来越多的Clay Street Table。因为不少孩子还有活动，来到Clay Street Table的占了参加活动的1/3多一点。我坚持让家长尽可能带着孩子过去，不仅仅是为了一张大合影，更主要的是有机会近距离观察就在教堂外边大街上住着的人们。十分令人欣慰的是，孩子们got the point themselves! 这是一位家长刚刚写的，
 
 “今天的活动真的非常的有意义！我儿子第一次参加，开始的时候还很拘谨，但到了clay street 的时候见到了一位露宿老人就在马路对面，马上说：妈妈，我要给他点东西，当时我车上只有瓶装水，他就拿了两瓶过去给他，回来后又说：我觉的他更需要一个被子，但我说东西已经搬进教会了，可能还要清点后才会送出去，可是他还是坚持说现在就想送过去并马上进去找负责人说，那位女士于是找到了一个睡袋陪着儿子一起去送给那位老人，我看到了儿子的开心和满足，并愿意和孩子们一起合照了！之前在募捐地点那怎么说都不愿照相。感谢。。。让孩子们有很多的机会参与有意义的活动”（@Joyce）
