--- a/_posts/2020-06-29-youth_awards_2020.md
+++ b/_posts/2020-06-29-youth_awards_2020.md
@@ -10,18 +10,18 @@ feature_row2:
 feature_row3:
   - image_path: /assets/images/pvsa/2019_jiaqi.jpg
 feature_row4:
-  - image_path: /assets/images/pvsa/2019_danica.jpg
+  - image_path: /assets/images/activities/danica_leung.jpg
 feature_row5:
     - image_path: /assets/images/pvsa/2019_qiyue.jpg
 ---
 
-每年青少年大会期间颁发的三个奖项不会因为疫情而中断，实际上我们的孩子们即便是在特殊时期，仍然积极向上，自强不息，为周边的人，为社区，为社会奉献着。他们在很大程度上也在影响着我们一代移民。社区在过去一年在几代华人的共同努力下又向前迈出了坚实的一步。
+每年青少年大会期间颁发的三个奖项不会因为疫情而中断，实际上我们的孩子们即便是在特殊时期，仍然积极向上，自强不息，为周边的人，为社区，为社会奉献着。他们在很大程度上也在影响着我们一代移民。社区在过去一年在两代华人的共同努力下又向前迈出了坚实的一步。
 
 # Victoria Ren Scholarship
 
 {% include feature_row id="feature_row1"%}
 
-今年的scholership将会授予Erik Liang, 他是Tigard High School的学生，秋季学期即将升入毕业班。 Erik不仅仅学业优良，还是本州体操成绩斐然的选手。在过去一年时间，他成为了社区大鼓队的主力队员，参加了平时所有的训练，在文化节和春节两次大鼓表演中为宣传我们中华文化可谓立下汗马功劳。
+今年的scholership将会授予Erik Liang, 他是Tigard High School的学生，秋季学期即将升入毕业班。 Erik不仅仅学业优良，还是本州体操成绩斐然的选手。在过去一年时间，他成为了社区大鼓队的主力队员，参加了平时所有的训练，在文化节和春节两次大鼓表演中表现出色。
 
 # Voice of Civic Engagement Award
 
@@ -41,16 +41,15 @@ Since 2019, Eddie has been a board member in the local chapter of Antlers, an El
 
 When classes were canceled at the start of the COVID-19 pandemic, many people were worried about isolation. Eddie joined the YouthLink group and volunteered to be a community teacher mentoring 7th grade kids to catch up with their algebra and geometry coursework through online meetings. It was a great learning experience for Eddie and his partners, witnessing people’s joy as they helped students to figure out complex material and learn new skills. Eddie believes that true satisfaction comes from helping others, and it doesn’t need to be a big effort.
 
-### Jiaqi (Jackie) Zhang, Sunset High School
+### Jiaqi (Jackie) Zhang, Rising Junior at Sunset High School
 
 {% include feature_row id="feature_row3"%}
 
 From her continuous participation in volunteering, public speaking, and civic engagement, Jiaqi (Jackie) has demonstrated her leadership by speaking up about her community and inspiring others. Her efforts are shown through many things, including volunteering at Laurel Parc for over three years, teaching students math virtually over quarantine, raising money to help children in foster care, participating in the OCC winter drive, and not to mention MC/anchoring for the first ever Chinese Festival as well as the Vincent Chin and BLM Memorial Vigil. She was also interviewed by KGW about the Chinese community in order to promote cultural and community engagement. Her actions have overall influenced the young generation to advocate for human equality and to find interest in community based activities.
 
-
 # Youth Empowerment Award
 
-在斯坦福的Knight-Hennessy Scholars program网页上，有这么一段话，"We welcome single-mindedness as long as it doesn’t come at the expense of engaging others. We seek scholars for whom success is a byproduct, not a goal, and leaders who can drive progress for humanity rather than for a select few." 我们社区培养的也是有着如此胸怀的一代华人，非常令人欣慰的是，越来越多的年轻人开始行动了起来。
+在斯坦福的Knight-Hennessy Scholars program网页上，有这么一段话，"We welcome single-mindedness as long as it doesn’t come at the expense of engaging others. We seek scholars for whom success is a byproduct, not a goal, and leaders who can drive progress for humanity rather than for a select few." 我们社区培养的也是有着这样mindset的一代华人，非常令人欣慰的是，越来越多的年轻人开始行动了起来。
 
 ### Danica Leung, Lincoln High School
 
@@ -62,8 +61,8 @@ As a policy debate captain at my school, Danica created and taught a debate curr
 
 During quarantine, her Constitution team unit lacked morale and stopped holding meetings altogether. At some point, 4/6 members wanted to quit. Danica helped lead the unit through the initial struggle and scheduled meetings, worked with coach to establish goals for each meeting, and created research assignments for each member. In the end, every member stayed on and they earned second place at Constitution Team finals as a team.
 
-### Qiyue (Cheery) Zhang, Westview High School
+### Qiyue (Cheery) Zhang, Rising Sophomore at Westview High School
 
 {% include feature_row id="feature_row5"%}
 
-Cheery has been a leader and contributed to the community in many ways. A star student in academics and a leader in Westview High School’s Student Government, Cheery is all about building others up and bringing together different communities using the skills she has gained. Having played ping pong for seven years, earned titles including Oregon State Champion in Women’s Singles, and received opportunities to showcase the sport on local news channels with her teammates, she grew to treasure the sport and wanted to give her peers a chance to discover the fun in ping pong as well. This past school year, she created a ping pong club at Westview. Because of her focus on making the club a fun experience for all different groups of students, the club was among the most popular at school. Through giving everything her best effort and avidly participating within her community, Cheery has learned how to juggle her school load and social life with her extracurriculars, inspiring those around her to participate and excel inside and outside of the classroom as well. As the vice president of a non-profit, student-run tutoring organization recently created called Students For Students, Cheery tutors younger students English so they can be high-achievers in school. Furthermore, being very proud of her Chinese heritage, Cheery advocates for better and better Chinese culture in Oregon. Because she has been practicing Guzheng for eight years—receiving a silver award at the 2019 “Hua Yue Cup” International Instrument, Dance, and Song Competition—Cheery spends time playing the traditional Chinese instrument at various locations such as Gresham Rehab & Specialty Care and Lan Su Garden. She was even invited to perform Guzheng for the Oregon state governor Kate Brown during a campaign event. These performances showcase an aspect of the Chinese culture to audiences and set an example for other Chinese adolescents to be proud of their heritage. Besides playing Guzheng to support the Chinese community and its traditions, Cheery also enjoys volunteering at the Oregon Food Bank. Through all of her volunteer efforts, she became one of the recipients of the PVSA gold medal in 2019. She also enjoys creating art and encourages others to think creatively. Being awarded the Premier Award for her painting for the Toyama International Children’s Art Exhibition of 2019 was a big honor. The exhibition showcased different countries’ artworks in Japan. Cheery also participates in the annual Junior Federal Duck Stamp Art Contest which advocates for wildlife conservation. She has won Oregon’s Best of Show in the past. As of 2020, Cheery Zhang has just completed her freshman year of high school. Her love for serving the community calls for finding the balance between achieving straight A’s in school and acting on things she finds meaningful. She does this all in hopes of setting an example for her peers, to encourage, enable, and most importantly, empower them, to be a bright leader for their community alongside herself, even when those goals can seem unattainable.
+Cheery has been a leader and contributed to the community in many ways. A star student in academics and a leader in Westview High School’s Student Government, Cheery is all about building others up and bringing together different communities using the skills she has gained. Having played ping pong for seven years, earned titles including Oregon State Champion in Women’s Singles, and received opportunities to showcase the sport on local news channels with her teammates, she grew to treasure the sport and wanted to give her peers a chance to discover the fun in ping pong as well. This past school year, she created a ping pong club at Westview. Because of her focus on making the club a fun experience for all different groups of students, the club was among the most popular at school. Through giving everything her best effort and avidly participating within her community, Cheery has learned how to juggle her school load and social life with her extracurriculars, inspiring those around her to participate and excel inside and outside of the classroom as well. As the vice president of a non-profit, student-run tutoring organization recently created called Students For Students, Cheery tutors younger students English so they can be high-achievers in school. Furthermore, being very proud of her Chinese heritage, Cheery advocates for better Chinese culture in Oregon. Because she has been practicing Guzheng for eight years—receiving a silver award at the 2019 “Hua Yue Cup” International Instrument, Dance, and Song Competition—Cheery spends time playing the traditional Chinese instrument at various locations such as Gresham Rehab & Specialty Care and Lan Su Garden. She was even invited to perform Guzheng for the Oregon state governor Kate Brown during a campaign event. These performances showcase an aspect of the Chinese culture to audiences and set an example for other Chinese adolescents to be proud of their heritage. Besides playing Guzheng to support the Chinese community and its traditions, Cheery also enjoys volunteering at the Oregon Food Bank. Through all of her volunteer efforts, she received the PVSA gold medal in 2019.
