--- a/_posts/2020-06-29-youth_awards_2020.md
+++ b/_posts/2020-06-29-youth_awards_2020.md
@@ -65,4 +65,4 @@ Cheery also enjoys volunteering inside and outside the community. She received t
 
 {% include feature_row id="feature_row1"%}
 
-今年的scholership将会授予Erik Liang, 他是Tigard High School的学生，秋季学期即将升入毕业班。 Erik不仅仅学业优良，还是本州体操成绩斐然的选手。在过去一年时间，他成为了社区大鼓队的主力队员，参加了平时所有的训练，在文化节和春节两次大鼓表演中表现出色。
+This year's scholarship will be awarded to Erik Liang, a rising senior student of Tigard High School. Erik not only maintains excellency with his school work, but also a top runner with outstanding performance in the state's gymnastics. In the past year, he became the main member of the community drum team, participated in all practices, and performed in the two drum performances at the Cultural Festival and the Spring Festival.
