--- a/_posts/2021-02-05-lifting_hope_2011.md
+++ b/_posts/2021-02-05-lifting_hope_2011.md
@@ -1,11 +1,11 @@
 ---
 title: "Lifting Hope 2021 成功举办"
 author: XiBei Zhao
-excerpt: "周五下午由THPRD，BSD和OCC共同主办的庆祝华人春节活动获得圆满成功！当天气温非常宜人，不仅没有雨，还出现了满天的火烧云，最重要的是没有风。 这样，所有的孔明灯冉冉升起，再悠悠飘向西北方向，便构成了一幅幅极其浪漫的画面。当然，对当地居民，可能是生平第一次见到，有的甚至以为是外星人侵入了进来。 经历了2020，再发生什么都不会觉得有什么奇怪的了。"
+excerpt: "周五下午由THPRD，BSD和OCC共同主办的庆祝华人春节活动获得圆满成功！当天气温非常宜人，不仅没有雨，还出现了满天的火烧云，更为幸运的是没有风。 这样，所有的孔明灯冉冉升起，再悠悠飘向西北方向，便构成了一幅幅极其浪漫的画面。当然，对当地居民，可能是生平第一次见到，有的甚至以为是外星人侵入了进来。 经历了2020，再发生什么都不会觉得有什么奇怪的了。"
 date: "2021-02-05"
 ---
 
-周五下午由[THPRD](http://www.thprd.org/)，[BSD](https://www.beaverton.k12.or.us/)和OCC共同主办的庆祝华人春节活动获得圆满成功！ 因为这次活动的主要内容是放孔明灯，这对天气和场地有不小的要求，感谢THPRD的决断力，把活动安排在了刚刚完工的[Cedar Hills Park](https://www.google.com/maps/place/Cedar+Hills+Park/@45.5018393,-122.8030372,17.54z/data=!4m5!3m4!1s0x0:0xe5da33b7b8c54665!8m2!3d45.5024818!4d-122.803294)，也方便了周边居民参与和欣赏。当天气温非常宜人，不仅没有雨，还出现了满天的火烧云，最重要的是没有风。 这样，所有的孔明灯冉冉升起，再悠悠飘向西北方向，便构成了一幅幅极其浪漫的画面。 当然，对当地居民，可能是生平第一次见到，有的甚至以为是外星人侵入了进来。 经历了2020，再发生什么都不会觉得有什么奇怪的了。
+周五下午由[THPRD](http://www.thprd.org/)，[BSD](https://www.beaverton.k12.or.us/)和OCC共同主办的庆祝华人春节活动获得圆满成功！ 因为这次活动的主要内容是放孔明灯，这对天气和场地有不小的要求，感谢THPRD的决断力，把活动安排在了刚刚完工的[Cedar Hills Park](https://www.google.com/maps/place/Cedar+Hills+Park/@45.5018393,-122.8030372,17.54z/data=!4m5!3m4!1s0x0:0xe5da33b7b8c54665!8m2!3d45.5024818!4d-122.803294)，也方便了周边居民参与和欣赏。当天气温非常宜人，不仅没有雨，还出现了满天的火烧云，更为幸运的是没有风。 这样，所有的孔明灯冉冉升起，再悠悠飘向西北方向，便构成了一幅幅极其浪漫的画面。 当然，对当地居民，可能是生平第一次见到，有的甚至以为是外星人侵入了进来。 经历了2020，再发生什么都不会觉得有什么奇怪的了。
 
 因为疫情的原因，活动过程不得不严格控制参加人数，感谢所有积极报名的家庭，相信在松手放灯的时刻，既享受了新年许愿的美好心情，也随着天灯的升起，寄托了对来年的祝福。 也是因为人数限制，无法邀请更多的社区团队参加演出，感谢OCC大鼓队，希望中文学校武术队，演示转手绢和带领大家起舞的几位义工。 [Youth Lens](http://pdxchinese.org/youthlens/)的两位同学希望尽快完成现场活动视频，与大家分享。 社区的所有活动都离不开来自义工们的奉献，感谢每一位台前幕后的义工！
 
