--- a/_posts/2021-02-05-lifting_hope_2011.md
+++ b/_posts/2021-02-05-lifting_hope_2011.md
@@ -13,6 +13,8 @@ date: "2021-02-05"
 
 在我们的文化中，牛被认为是勤奋，积极和诚实的象征。相信没有更好的方式来描述作为华裔美国人的我们。2021年是牛年，在此祝大家新年快乐，身体健康。
 
+<iframe width="969" height="545" src="https://www.youtube.com/embed/IPs36aEPRRw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 ![]({{ site.url }}/assets/images/lifting_up_202100.jpg)
 
 ![]({{ site.url }}/assets/images/lifting_up_202101.jpg)
