--- a/_posts/2021-08-28-htc_2021.md
+++ b/_posts/2021-08-28-htc_2021.md
@@ -24,3 +24,5 @@ date: "2021-08-28"
 ![]({{ site.url }}/assets/images/WeChat Image_20210828233451b.jpg)
 
 ![]({{ site.url }}/assets/images/WeChat Image_20210828111244.jpg)
+
+![]({{ site.url }}/assets/images/WeChat Image_20210903112754.jpg)
